--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,22 @@
 {
-    "short_name": "React App",
-    "name": "Create React App Sample",
+    "short_name": "Insight",
+    "name": "Insight - Reading, Reviews and Recommendations",
     "icons": [
+      {
+        "src": "favicon.ico",
+        "sizes": "64x64 32x32 24x24 16x16",
+        "type": "image/x-icon"
+      },
+      {
+        "src": "favicon192.png",
+        "type": "image/png",
+        "sizes": "192x192"
+      },
+      {
+        "src": "favicon512.png",
+        "type": "image/png",
+        "sizes": "512x512"
+      }
     ],
     "start_url": ".",
     "display": "standalone",
